--- a/ProjetWebPID2425/src/main/resources/templates/layout.html
+++ b/ProjetWebPID2425/src/main/resources/templates/layout.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">PID</title>
+<title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">PIDR</title>
 
 <!-- Bootstrap CSS -->
 <link rel="stylesheet"
