--- a/ProjetWebPID2425/cafeteria_app_ang/src/app/app.component.html
+++ b/ProjetWebPID2425/cafeteria_app_ang/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-menu/>
-<router-outlet />
+<app-sidebar-cmp>
+  <app-menu/>
+  <div class="app-container">
+    <router-outlet/>
+  </div>
+</app-sidebar-cmp>
