--- a/ProjetWebPID2425/cafeteria_app_ang/src/app/menu/menu.component.html
+++ b/ProjetWebPID2425/cafeteria_app_ang/src/app/menu/menu.component.html
@@ -1,8 +1,7 @@
 <header class="brand-name">
   <nav class="menu">
   <div class="actions">
-    <a routerLink="/home" class="action-item">Home</a>
-    <a routerLink="/sandwichs" class="action-item" *kaHasRoles="['USER']; checkRealm:true">Sandwichs</a>
+    <mat-icon (click)="toggleMenu()">menu</mat-icon>
     <a routerLink="/profile" class="action-item" *kaHasRoles="['USER']; checkRealm:true">My Profile</a>
     @if (!isAuthenticated()) {
       <button class="action-item" (click)="login()">Login</button>
